--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 My project
+Test github project 2020-1203
+git add, git commit at 1203
+push use: git push https:/github.com/pliu5455/Test2020-1203.git
